# chess

./: Dockerfile  LICENSE  README.md  httpcall.py  main.py  pyproject.toml
chess_cheater/: cli.py  game.py  prediction.py  predictor.py  rest.py
data/: games.py
