[tool.poetry]
name = "chess-cheater"
version = "0.1.0"
description = ""
authors = ["Henning Hinze <henning.hinze@mail.de>"]

[tool.poetry.dependencies]
python = "^3.6.9"
fastapi = "^0.63.0"
requests = "^2.25.1"
stockfish = "^3.13.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^20.8b1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"